-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 25
-
Component/s: hotspot
-
b11
-
aarch64
-
linux
ARM cross build with Linaro GCC 7.3-2018.05 gives the following error:
src/hotspot/share/code/codeBlob.hpp:349:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
^~~~~
src/hotspot/share/code/codeBlob.hpp:437:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
^~~~~
src/hotspot/share/code/codeBlob.hpp:477:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
^~~~~
src/hotspot/share/code/codeBlob.hpp:560:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
Workaround (rename _vptr field):
sed s/_vptr/_vpntr/ -i src/hotspot/share/code/nmethod.* src/hotspot/share/code/codeBlob.*
src/hotspot/share/code/codeBlob.hpp:349:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
^~~~~
src/hotspot/share/code/codeBlob.hpp:437:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
^~~~~
src/hotspot/share/code/codeBlob.hpp:477:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
^~~~~
src/hotspot/share/code/codeBlob.hpp:560:21: error: member '_vptr' conflicts with virtual function table field name
static const Vptr _vptr;
Workaround (rename _vptr field):
sed s/_vptr/_vpntr/ -i src/hotspot/share/code/nmethod.* src/hotspot/share/code/codeBlob.*
- relates to
-
JDK-8349088 De-virtualize Codeblob and nmethod
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/92efab90
-
Review(master)
openjdk/jdk/23703