8350344: Cross-build failure: _vptr conflicts with internal virtual table field